care/force-app/main/default/objects/Reference__c/fields/Ages_of_children_when_hired__c.field-meta.xml
<CustomField>
    <fullName>Ages_of_children_when_hired__c</fullName>
    <inlineHelpText>What were the ages of your child/children when you hired this person?</inlineHelpText>
    <label>Ages of children when hired?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>