care/force-app/main/default/objects/Reference__c/fields/Candidate_Profile__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Profile__c</fullName>
    <label>Candidate Profile</label>
    <referenceTo>Candidate_Profile__c</referenceTo>
    <relationshipLabel>References</relationshipLabel>
    <relationshipName>References</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>