care/force-app/main/default/objects/Reference__c/fields/Child_s_relationship_towards_this_person__c.field-meta.xml
<CustomField>
    <fullName>Child_s_relationship_towards_this_person__c</fullName>
    <inlineHelpText>How would you describe your child’s relationship and feelings towards this person?</inlineHelpText>
    <label>Child&apos;s relationship towards this person</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>