care/force-app/main/default/objects/Reference__c/fields/Could_they_follow_a_schedule__c.field-meta.xml
<CustomField>
    <fullName>Could_they_follow_a_schedule__c</fullName>
    <inlineHelpText>How were they at following the schedule you laid out for them?</inlineHelpText>
    <label>Could they follow a schedule?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>