care/force-app/main/default/objects/Reference__c/fields/Description_in_3_words__c.field-meta.xml
<CustomField>
    <fullName>Description_in_3_words__c</fullName>
    <inlineHelpText>How would you describe this person in 3 words?</inlineHelpText>
    <label>Description in 3 words</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>