care/force-app/main/default/objects/Reference__c/fields/Disciplinary_situations__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_situations__c</fullName>
    <inlineHelpText>Was there ever a disciplinary issue the person had to deal with? How were they at handling that?</inlineHelpText>
    <label>Disciplinary situations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>