care/force-app/main/default/objects/Reference__c/fields/Emergency_situations_to_handle__c.field-meta.xml
<CustomField>
    <fullName>Emergency_situations_to_handle__c</fullName>
    <inlineHelpText>Was there ever any sort of emergency the person had to handle?</inlineHelpText>
    <label>Emergency situations to handle</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>