care/force-app/main/default/objects/Reference__c/fields/Employment_settings__c.field-meta.xml
<CustomField>
    <fullName>Employment_settings__c</fullName>
    <inlineHelpText>What employment settings have you seen this person in?</inlineHelpText>
    <label>Employment settings</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>