care/force-app/main/default/objects/Reference__c/fields/Examples_of_children_s_activities__c.field-meta.xml
<CustomField>
    <fullName>Examples_of_children_s_activities__c</fullName>
    <inlineHelpText>Can you provide some examples of activities that she did with your kids?</inlineHelpText>
    <label>Examples of children&apos;s activities</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>