care/force-app/main/default/objects/Reference__c/fields/Feedback_Interaction_with_children__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Interaction_with_children__c</fullName>
    <inlineHelpText>What is your feedback on their interaction with children?</inlineHelpText>
    <label>Feedback Interaction with children</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>