care/force-app/main/default/objects/Reference__c/fields/Feelings_about_Driving_Safety_Pracice__c.field-meta.xml
<CustomField>
    <fullName>Feelings_about_Driving_Safety_Pracice__c</fullName>
    <inlineHelpText>Did she ever drive with your kids? How did you feel about that? Did you feel confident that this person was always following the best safety practices?</inlineHelpText>
    <label>Feelings about Driving/Safety Pracice</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>