care/force-app/main/default/objects/Reference__c/fields/Handle_medical_or_non_medical_emergency__c.field-meta.xml
<CustomField>
    <fullName>Handle_medical_or_non_medical_emergency__c</fullName>
    <inlineHelpText>How well do you think she would handle an emergency, medical or non-medical?</inlineHelpText>
    <label>Handle medical or non-medical emergency</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>