care/force-app/main/default/objects/Reference__c/fields/How_did_they_handle_age_transition__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_handle_age_transition__c</fullName>
    <inlineHelpText>How did this person handle the age transitions of your child?</inlineHelpText>
    <label>How did they handle age transition?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>