care/force-app/main/default/objects/Reference__c/fields/How_did_they_handle_equal_attention__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_handle_equal_attention__c</fullName>
    <inlineHelpText>How this person at making sure your children got equal attention?</inlineHelpText>
    <label>How did they handle equal attention?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>