care/force-app/main/default/objects/Reference__c/fields/How_did_they_handle_inclement_weather__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_handle_inclement_weather__c</fullName>
    <inlineHelpText>How did you and she handle inclement weather situations?</inlineHelpText>
    <label>How did they handle inclement weather?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>