care/force-app/main/default/objects/Reference__c/fields/How_did_they_handle_routines__c.field-meta.xml
<CustomField>
    <fullName>How_did_they_handle_routines__c</fullName>
    <inlineHelpText>How did this person handle the routine of your different children?</inlineHelpText>
    <label>How did they handle routines?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>