care/force-app/main/default/objects/Reference__c/fields/How_did_you_meet__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_meet__c</fullName>
    <label>How did you meet?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>