care/force-app/main/default/objects/Reference__c/fields/How_long_have_you_known_her__c.field-meta.xml
<CustomField>
    <fullName>How_long_have_you_known_her__c</fullName>
    <inlineHelpText>How long have you known her?</inlineHelpText>
    <label>How long have you known her?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>