care/force-app/main/default/objects/Reference__c/fields/How_was_she_at_being_reliable__c.field-meta.xml
<CustomField>
    <fullName>How_was_she_at_being_reliable__c</fullName>
    <inlineHelpText>How was she at being reliable?</inlineHelpText>
    <label>How was she at being reliable?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>