care/force-app/main/default/objects/Reference__c/fields/Late_No_Shows__c.field-meta.xml
<CustomField>
    <fullName>Late_No_Shows__c</fullName>
    <inlineHelpText>Was there an issue of late/no shows at any time?</inlineHelpText>
    <label>Late/No Shows</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>