care/force-app/main/default/objects/Reference__c/fields/Length_of_employment__c.field-meta.xml
<CustomField>
    <fullName>Length_of_employment__c</fullName>
    <label>Length of employment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>