care/force-app/main/default/objects/Reference__c/fields/Most_qualified_emplyment__c.field-meta.xml
<CustomField>
    <fullName>Most_qualified_emplyment__c</fullName>
    <inlineHelpText>What field of employment have you seen them most qualified for and happy doing?</inlineHelpText>
    <label>Most qualified emplyment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>