care/force-app/main/default/objects/Reference__c/fields/Name_of_Reference__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Reference__c</fullName>
    <label>Name of Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>