care/force-app/main/default/objects/Reference__c/fields/Past_employment__c.field-meta.xml
<CustomField>
    <fullName>Past_employment__c</fullName>
    <inlineHelpText>What is your perspective and opinions on this persons past employment?</inlineHelpText>
    <label>Past employment</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>