care/force-app/main/default/objects/Reference__c/fields/Personality_and_work_ethic__c.field-meta.xml
<CustomField>
    <fullName>Personality_and_work_ethic__c</fullName>
    <inlineHelpText>What would you say to a potential employer about her personality and work ethic?</inlineHelpText>
    <label>Personality and work ethic</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>