care/force-app/main/default/objects/Reference__c/fields/Reference_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reference_Summary__c</fullName>
    <label>Reference Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>