care/force-app/main/default/objects/Reference__c/fields/Reliability_and_flexibility__c.field-meta.xml
<CustomField>
    <fullName>Reliability_and_flexibility__c</fullName>
    <inlineHelpText>Describe this person’s reliability and schedule flexibility</inlineHelpText>
    <label>Reliability and flexibility</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>