care/force-app/main/default/objects/Reference__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <inlineHelpText>What is one helpful suggestion for this person, in terms of improving themselves?</inlineHelpText>
    <label>Suggestions for self improvement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>