care/force-app/main/default/objects/Reference__c/fields/Suggestions_for_improvement__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_for_improvement__c</fullName>
    <inlineHelpText>Was there anything you would suggest to this person for improvement as a care provider?</inlineHelpText>
    <label>Suggestions for improvement</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>