care/force-app/main/default/objects/Reference__c/fields/Suggestions_to_grow_as_a_care_advisor__c.field-meta.xml
<CustomField>
    <fullName>Suggestions_to_grow_as_a_care_advisor__c</fullName>
    <inlineHelpText>What is one suggestion you have for her to grow as a care provider?</inlineHelpText>
    <label>Suggestions to grow as a care advisor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>