care/force-app/main/default/objects/Reference__c/fields/Trust_provider_in_your_home__c.field-meta.xml
<CustomField>
    <fullName>Trust_provider_in_your_home__c</fullName>
    <inlineHelpText>Did you trust the care provider in your home?</inlineHelpText>
    <label>Trust provider in your home</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>