care/force-app/main/default/objects/Reference__c/fields/Were_these_completed__c.field-meta.xml
<CustomField>
    <fullName>Were_these_completed__c</fullName>
    <label>Were these completed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>