care/force-app/main/default/objects/Reference__c/fields/What_made_you_hire_this_candidate__c.field-meta.xml
<CustomField>
    <fullName>What_made_you_hire_this_candidate__c</fullName>
    <label>What made you hire this candidate?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>