care/force-app/main/default/objects/Reference__c/fields/What_service_did_this_person_provide__c.field-meta.xml
<CustomField>
    <fullName>What_service_did_this_person_provide__c</fullName>
    <label>What service did this person provide?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>