care/force-app/main/default/objects/Reference__c/fields/What_were_their_daily_responsibilities__c.field-meta.xml
<CustomField>
    <fullName>What_were_their_daily_responsibilities__c</fullName>
    <label>What were their daily responsibilities?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>