care/force-app/main/default/objects/Reference__c/fields/Would_you_recommend_this_person__c.field-meta.xml
<CustomField>
    <fullName>Would_you_recommend_this_person__c</fullName>
    <inlineHelpText>Would you recommend this person to another mother/father? Why?</inlineHelpText>
    <label>Would you recommend this person?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>