care/force-app/main/default/objects/Reference__c/recordTypes/Personal_Reference.recordType-meta.xml
<RecordType>
    <fullName>Personal_Reference</fullName>
    <active>true</active>
    <label>Personal Reference</label>
</RecordType>