care/force-app/main/default/objects/Reference__c/recordTypes/Professional_Reference.recordType-meta.xml
<RecordType>
    <fullName>Professional_Reference</fullName>
    <active>true</active>
    <label>Professional Reference</label>
</RecordType>